# apriltags_ros_test

./: CMakeLists.txt  README.md  package.xml  tag_sizes.yaml
include/apriltags_ros/: apriltag_detector.h
launch/: ap_detector_team2.launch  apriltag_detector_node.launch  detect_team5.launch  detect_team_1.launch  detect_team_3.launch  detect_team_4.launch  detect_team_5.launch  detect_team_7.launch  detect_team_9.launch  example.launch  team6.launch  team8.launch
msg/: AprilTagsWithInfos.msg  Rects.msg
src/: apriltag_detector.cpp  apriltags_postprocessing_node.py
tests/: apriltags_tester_node.py  apriltags_tester_node.test
